workspace/.metadata/.plugins/org.eclipse.cdt.ui/ArrayPracticeProblems.build.log
00:12:22 **** Incremental Build of configuration Debug for project ArrayPracticeProblems ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\ArrayPracticeProblems.o" "..\\src\\ArrayPracticeProblems.cpp" 
..\src\ArrayPracticeProblems.cpp: In function 'int main()':
..\src\ArrayPracticeProblems.cpp:21:18: error: expected initializer before numeric constant
  int lengthTable 5;
                  ^
..\src\ArrayPracticeProblems.cpp:24:13: error: 'lengthTable' was not declared in this scope
  int table1[lengthTable] = {10,20,30,40,100};
             ^~~~~~~~~~~
..\src\ArrayPracticeProblems.cpp:28:2: error: expected ';' before 'return'
  return 0;
  ^~~~~~

00:12:23 Build Failed. 3 errors, 0 warnings. (took 328ms)

